--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-
-numpy==1.19.4
-torch==1.7.1
-torchvision==0.8.2
-tensorboard==2.4.1
-tensorboardX==2.0
-tqdm==4.55.0
-sklearn
+numpy>=1.26.4
+torch>=2.8.0
+torchvision>=0.20.0
+tensorboard>=2.20.0
+tensorboardX==2.6.4
+tqdm>=4.67.1
+scikit-learn
 pandas
 seaborn
